# SAD2_final_project

./: .gitattributes  .gitignore  .pre-commit.yaml  README.md  bn.py  bn_exercise.py  pyproject.toml  requirements.txt  run.sh  task3_readme.md
files_fix/: fiel_handling.py
notebooks/: Cell 12.csv  brudno_joanna_raport.ipynb  brudno_max_raport.ipynb  notebook_datasets.ipynb  notebook_report.ipynb  notebook_report_asia.ipynb  notebook_report_clean.ipynb  notebook_report_not_clean.ipynb  raport_max.ipynb  report draft.ipynb  report.ipynb  report_copy.ipynb  report_draft.ipynb  test.ipynb  test_notebook.ipynb  testowy_max_notebook.ipynb  tutorial_validate_model_example.ipynb  wnioski_na_brudno.txt
scripts/: _bootstrap_py2.sh  bnfinder.py  download_and_unzip_report_data.sh  task3.py  task3_old.py
src/sad2_final_project/: __init__.py
src/sad2_final_project/analysis/: __init__.py  analysis.py  experiment.py  merge_and_rename.py  merge_results.py  metrics.py  metrics_new.py  score_functions.py
src/sad2_final_project/bnfinder/: __init__.py  bnfinder.py  bnfinder_wrapper.py  metrics.py  score_functions.py
src/sad2_final_project/boolean_bn/: __init__.py  bn.py  bn_sampling.py  bn_test.py
